feat: perform full datapack scan with broader migration and warnings