@@ -6,13 +6,23 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class DatapackBridgeService {
     private static final int MC_121_PACK_FORMAT = 61;
+    private static final Set<String> TEXT_EXTENSIONS = Set.of(
+        ".mcfunction", ".json", ".mcmeta", ".txt", ".nbt.txt"
+    );
+
+    private static final Pattern LEGACY_ATTRIBUTE_PATTERN = Pattern.compile("(?<!minecraft:)\\bgeneric\\.[a-z_]+\\b");
 
     private final JavaPlugin plugin;
     private final McFunctionTransformer transformer;
@@ -26,14 +36,16 @@ public class DatapackBridgeService {
         this.transformer = new McFunctionTransformer(allReplacements);
     }
 
-    public BridgeResult bridge(Path sourceDatapack, Path outputDatapack) throws IOException {
+    public DatapackBridgeReport bridge(Path sourceDatapack, Path outputDatapack) throws IOException {
         if (!Files.exists(sourceDatapack)) {
             throw new IOException("Source datapack does not exist: " + sourceDatapack);
         }
 
         List<Path> transformedFiles = new ArrayList<>();
+        Set<String> warnings = new LinkedHashSet<>();
         Files.createDirectories(outputDatapack);
 
+        int[] scannedFiles = {0};
         try (var stream = Files.walk(sourceDatapack)) {
             stream.forEach(path -> {
                 try {
@@ -45,18 +57,25 @@ public class DatapackBridgeService {
                         return;
                     }
 
+                    scannedFiles[0]++;
                     String fileName = path.getFileName().toString();
-                    if (fileName.endsWith(".mcfunction")) {
-                        List<String> lines = Files.readAllLines(path, StandardCharsets.UTF_8);
-                        List<String> transformed = lines.stream().map(transformer::transformLine).toList();
-                        Files.write(target, transformed, StandardCharsets.UTF_8);
-                        transformedFiles.add(target);
-                    } else if ("pack.mcmeta".equals(fileName)) {
-                        String contents = Files.readString(path, StandardCharsets.UTF_8);
-                        contents = contents.replaceAll("\"pack_format\"\\s*:\\s*\\d+", "\"pack_format\": " + MC_121_PACK_FORMAT);
-                        Files.writeString(target, contents, StandardCharsets.UTF_8);
+
+                    if ("pack.mcmeta".equals(fileName) || isTextFile(fileName)) {
+                        String original = Files.readString(path, StandardCharsets.UTF_8);
+                        String transformed = transformer.transformText(original);
+
+                        if ("pack.mcmeta".equals(fileName)) {
+                            transformed = transformed.replaceAll("\"pack_format\"\\s*:\\s*\\d+", "\"pack_format\": " + MC_121_PACK_FORMAT);
+                        }
+
+                        if (!original.equals(transformed)) {
+                            transformedFiles.add(target);
+                        }
+
+                        collectWarnings(relative, transformed, warnings);
+                        Files.writeString(target, transformed, StandardCharsets.UTF_8);
                     } else {
-                        Files.copy(path, target, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+                        Files.copy(path, target, StandardCopyOption.REPLACE_EXISTING);
                     }
                 } catch (IOException exception) {
                     throw new RuntimeException(exception);
@@ -69,11 +88,32 @@ public class DatapackBridgeService {
             throw wrapped;
         }
 
-        return new BridgeResult(sourceDatapack, outputDatapack, transformedFiles.size());
+        return new DatapackBridgeReport(sourceDatapack, outputDatapack, transformedFiles.size(), scannedFiles[0], List.copyOf(warnings));
     }
 
-    public void logResult(BridgeResult result) {
+    private void collectWarnings(Path relative, String content, Set<String> warnings) {
+        Matcher attributeMatcher = LEGACY_ATTRIBUTE_PATTERN.matcher(content);
+        if (attributeMatcher.find()) {
+            warnings.add(relative + " still contains legacy attribute token: " + attributeMatcher.group());
+        }
+    }
+
+    private boolean isTextFile(String fileName) {
+        String lower = fileName.toLowerCase();
+        for (String extension : TEXT_EXTENSIONS) {
+            if (lower.endsWith(extension)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    public void logResult(DatapackBridgeReport result) {
         plugin.getLogger().info("Sanguine bridge built: " + result.sourceDatapack() + " -> " + result.outputDatapack()
-            + " (" + result.transformedFiles() + " .mcfunction files transformed)");
+            + " (" + result.transformedFiles() + " files transformed, " + result.scannedFiles() + " files scanned)");
+
+        for (String warning : result.warnings()) {
+            plugin.getLogger().warning("Bridge review: " + warning);
+        }
     }
 }
